--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -46,3 +46,46 @@ a{
   max-width: 570px;
   margin: 0 auto 55px;
 }
+
+.breadcrumbs{
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 25px;
+  position: relative;
+  &::before{
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 0;
+    background-image: url(../images/icons/home-icon.svg);
+    width: 16px;
+    height: 16px;
+  }
+  &__list{
+    display: flex;
+  }
+  &__item{
+    color: #727272;
+    padding-right: 40px;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      right: 15px;
+      top: 9px;
+      background-image: url(../images/icons/angle-right.svg);
+      width: 9px;
+      height: 10px;
+    }
+    &:last-child{
+      color: $accent;
+      padding-right: 0;
+      &::after{
+        display: none;
+      }
+    }
+  }
+  &__link{
+    color: inherit;
+  }
+}
